Corrects margin bottoms so that there is better overall spacing...
between rows and so that there is a bit of marging at the very top
of the site. Also corrects the font-size around the matrix channel
on smaller screens (#12). I meant to include that last bit on the
previous commit, but it's 4am and I fucked it up.

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body {
 
 /* Header Styles */
 h1 {
-  margin: 0;
+  margin-bottom: 0;
   display: flex;
   align-items: center;
 }
@@ -64,7 +64,7 @@ form {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto;
-  margin: 0 auto;
+  margin: 0 auto 1em;
 }
 
 /* Footer Grid Styles */
@@ -125,6 +125,11 @@ form {
   .main-5 {
     grid-column: 1 / span-2;
     grid-row: 5;
+  }
+
+  /* Resizes matrix channel to avoid spillover */
+  .matrix-channel {
+    font-size: 0.95em;
   }
 }
 
